# automated-surface-defect-identification-in-production

./: .gitignore  PROJECT_ALIGNMENT.md  README.md  pyproject.toml
data/: model_fold_ap50.csv  pvalue_summary.csv  split_sensitivity.csv  yolov8n_fold_scores.csv
mini_app/: app.js  index.html  styles.css
reports/summary/: anova_summary.csv  model_rankings.csv  tukey_hsd_summary.csv
scripts/: evaluate_yolo_folds.py  prepare_neu.py  train_yolo_folds.py
surface_defect_benchmark/: __init__.py  analysis.py  cli.py  data_io.py  plots.py  statistics.py
tests/: test_data_io.py  test_evaluate_yolo_folds.py  test_prepare_neu.py  test_statistics.py
